# goldilocks_sensibility_ws

./: .gitignore  .gitmodules  Control_Actions.md  Progress_and_Troubleshoot.md  README  README.md  imgui.ini
.devcontainer/: Dockerfile  devcontainer.json
build_isolated/: catkin_make_isolated.cache
build_isolated/bdr11_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/bdr11_description/atomic_configure/: .rosinstall  setup.sh
build_isolated/bdr11_description/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build_isolated/bdr11_description/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/bdr11_moveit_config/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/bdr11_moveit_config/atomic_configure/: .rosinstall  _setup_util.py  local_setup.sh
build_isolated/bdr11_moveit_config/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build_isolated/bdr11_moveit_config/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/bdr11_test_moveit_config/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/bdr11_test_moveit_config/atomic_configure/: .rosinstall  setup.sh
build_isolated/bdr11_test_moveit_config/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build_isolated/bdr11_test_moveit_config/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/bdr_ur10_moveit/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/bdr_ur10_moveit/atomic_configure/: local_setup.sh  setup.sh
build_isolated/bdr_ur10_moveit/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  (+1 more)
build_isolated/bdr_ur10_moveit_config/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/hmi/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/moveit_quantec/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/tars_robot/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/ur10_description_v3/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
devel/: .catkin  .rosinstall  local_setup.sh
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/bdr11_description/: .catkin  local_setup.sh
devel_isolated/bdr11_moveit_config/: .catkin  setup.sh
devel_isolated/bdr11_test_moveit_config/: .catkin  local_setup.sh
devel_isolated/bdr_ur10_moveit/: .catkin  .rosinstall
devel_isolated/bdr_ur10_moveit_config/: .catkin  _setup_util.py
devel_isolated/hmi/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel_isolated/moveit_quantec/: .catkin  local_setup.sh  setup.sh
devel_isolated/tars_robot/: .catkin  _setup_util.py  local_setup.sh
devel_isolated/ur10_description_v3/: .catkin  .rosinstall  setup.sh
src/bdr11_description/: CMakeLists.txt  package.xml
src/bdr11_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/bdr11_moveit_config_v1/: .setup_assistant  CMakeLists.txt  package.xml
src/bdr_ur10_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/bdr_ur10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/bdr_ur10_moveit_test/: .setup_assistant  CMakeLists.txt  package.xml
src/bdr_ur10_moveit_v1/: .setup_assistant  CMakeLists.txt  package.xml
src/bdr_ur10_moveit_v2/: .setup_assistant  CMakeLists.txt  package.xml
src/bdr_ur10_moveit_v3/: .setup_assistant  CMakeLists.txt
src/bdr_ur10_moveit_v4/: .setup_assistant  CMakeLists.txt  package.xml
src/bdr_ur10_moveit_v5/: .setup_assistant  CMakeLists.txt
src/bdr_ur10_moveit_v6/: .setup_assistant  CMakeLists.txt  package.xml
src/bdr_ur10_moveit_v7/: .setup_assistant  CMakeLists.txt  package.xml
src/ft_sensor/: CMakeLists.txt  package.xml
src/ft_sensor/scripts/: zero_ft_sensor.py
src/ft_sensor/src/: airskin_state.cpp
src/ft_sensor/urdf/: ft_sensor_gazebo.urdf  robot.urdf
src/hmi/: CMakeLists.txt
src/hmi/include/hmi/: Control_Panel.cpp  Control_Panel.h  Main_Application.cpp  Main_Application.h  Measurement_Panel.cpp  Measurement_Panel.h  Plot_Panel.cpp  Plot_Panel.h
src/hmi/src/: hmi.cpp  main.cpp  navigate.py  navigate_goals.py
src/tars_robot/: CMakeLists.txt
src/tars_robot/config/: config.rviz
src/tars_robot/data/2024-09-12_20-34_Measurement-Set/1_Measurement/: 1_Measurement.csv
src/tars_robot/data/2024-09-12_20-45_Measurement-Set/1_Measurement/: 1_Measurement.csv
src/tars_robot/data/2024-09-12_20-52_Measurement-Set/1_Measurement/: 1_Measurement.csv
src/tars_robot/data/2024-09-12_20-59_Measurement-Set/1_Measurement/: 1_Measurement.csv
src/tars_robot/data/2024-09-13_14-00_Measurement-Set/1_Measurement/: 1_Measurement.csv
src/tars_robot/include/classes/: Measurement.cpp  Measurement.h  Robot.cpp  Robot.h  get_pose.cpp  get_pose.h
src/tars_robot/launch/: bdr_ur10.launch  bdr_ur10_gazebo.launch  depth_camera.launch  gazeboi_sim.launch  gazeboi_sim_camera.launch  measure_sensitivity.launch  run.launch  setup.launch  start_sensibility_measurement.launch  tcp_connection.launch
src/tars_robot/launch/call_ur_program/: call_ur_setup_program.launch
src/tars_robot/param/: sensitivity_program_param.yaml
src/tars_robot/scripts/: call_ur_measurement_program.py  create_sensibility_plot.py  start_camera_node.py
src/tars_robot/src/: advertise_topics_for_UR.cpp  move_in_z_example.cpp  start_sensibility_measurements.cpp  stop_teaching_mode.cpp
src/ur10_description_v3/: CMakeLists.txt
(+525 files in other folders)
